--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -32,6 +32,10 @@
 		</div>
 		<div>
 			<img src="picture/header4.jpg" class="headerSlide" />
+			<p>Financial Analyst</p>
+		</div>
+		<div>
+			<img src="picture/header5.jpg" class="headerSlide" />
 			<p>Explorer</p>
 		</div>
 		
