change index file

--- a/WebContent/blog.html
+++ b/WebContent/blog.html
@@ -14,7 +14,7 @@
   			
   		</div>
   		<div class="description">
-  			<p class="p_title" >I will update this when I find something interesting.</p>
+  			<p style="color: #89bdd3;font-size: 25px; text-align:center;">It's under construction.</p>
   			<p class="p_subtitle"></p>
   			<p class="p_subsubtitle"></p>
   		</div>
