--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -34,10 +34,10 @@
 			<img src="picture/header4.jpg" class="headerSlide" />
 			<p>Financial Analyst</p>
 		</div>
-		<div>
+<!-- 		<div>
 			<img src="picture/header5.jpg" class="headerSlide" />
 			<p>Explorer</p>
-		</div>
+		</div> -->
 		
 </div>
 
